Finalização Crud Client